include/altdss/capi/dss.h

    /*! 
    Array of strings with all Capacitor names in the circuit.
    */
    ALTDSS_CAPI_DLL void Capacitors_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Sets the first Capacitor active. Returns 0 if no more.
    */
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_First(void);
    /*! 
    Delta connection or wye?
    */
    ALTDSS_CAPI_DLL uint16_t Capacitors_Get_IsDelta(void);
    /*! 
    Bank kV rating. Use LL for 2 or 3 phases, or actual can rating for 1 phase.
    */
    ALTDSS_CAPI_DLL double Capacitors_Get_kV(void);
    /*! 
    Total bank KVAR, distributed equally among phases and steps.
    */
    ALTDSS_CAPI_DLL double Capacitors_Get_kvar(void);
    /*! 
    Sets the active Capacitor by Name.
    */
    ALTDSS_CAPI_DLL const char* Capacitors_Get_Name(void);
    /*! 
    Sets the next Capacitor active. Returns 0 if no more.
    */
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_Next(void);
    /*! 
    Number of steps (default 1) for distributing and switching the total bank kVAR.
    */
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_NumSteps(void);
    /*! 
    Delta connection or wye?
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_IsDelta(uint16_t Value);
    /*! 
    Bank kV rating. Use LL for 2 or 3 phases, or actual can rating for 1 phase.
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_kV(double Value);
    /*! 
    Total bank KVAR, distributed equally among phases and steps.
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_kvar(double Value);
    /*! 
    Sets the active Capacitor by Name.
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_Name(const char* Value);
    /*! 
    Number of steps (default 1) for distributing and switching the total bank kVAR.
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_NumSteps(int32_t Value);
    /*! 
    Number of Capacitor objects in active circuit.
    */
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_Count(void);
    ALTDSS_CAPI_DLL uint16_t Capacitors_AddStep(void);
    ALTDSS_CAPI_DLL uint16_t Capacitors_SubtractStep(void);
    /*! 
    Number of Steps available in cap bank to be switched ON.
    */
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_AvailableSteps(void);
    /*! 
    An array of integers [0..NumSteps-1] indicating state of each step. If the read value is -1 an error has occurred.
    */
    ALTDSS_CAPI_DLL void Capacitors_Get_States(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Capacitors_Get_States but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Capacitors_Get_States_GR(void);
    /*! 
    Array of integer [0..numSteps-1] indicating the state of each step
    */
    ALTDSS_CAPI_DLL void Capacitors_Set_States(const int32_t* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Capacitors_Open(void);
    ALTDSS_CAPI_DLL void Capacitors_Close(void);
    ALTDSS_CAPI_DLL int32_t Capacitors_Get_idx(void);
    ALTDSS_CAPI_DLL void Capacitors_Set_idx(int32_t Value);